Monuments / show.html.erb created on views/pages/monuments

--- a/app/views/pages/monuments/show.html.erb
+++ b/app/views/pages/monuments/show.html.erb
@@ -1,16 +1,18 @@
 <h1><%= @monument.name %></h1>
-<ul>
-  <li><%= @monument.reviews.lenght %> reviews</li>
-  <li><%= @monument.address %></li>
-</ul>
 <div>
-  <% @monument.picture.each do |picture| %>
-  <%= image_tag (""), class: "img-responsive"%>
-  <% end %>
+  <p><%= @monument.reviews.lenght %> reviews</p>
+  <p><%= @monument.address %></p>
+</div>
+<div>
+  <%# @monument.picture.each do |picture| %>
+  <%#= image_tag (""), class: "img-responsive"%>
+  <%# end %>
 </div>
 
-<p>Owner: <%= @monumen.user_id.username %></p>
-<p><%= @monument.description %></p>
+<div>
+  <p>Owner: <%= @monument.user_id.username %></p>
+  <p><%= @monument.description %></p>
+</div>
 
 <div>
   <p><%= @monument.price %></p>
