--- a/app/views/pages/monuments/show.html.erb
+++ b/app/views/pages/monuments/show.html.erb
@@ -1,20 +1,7 @@
 <h1><%= @monument.name %></h1>
-<div>
-  <p><%= @monument.reviews.length %> reviews</p>
-  <p><%= @monument.address %></p>
-</div>
-<div>
-  <%# @monument.picture.each do |picture| %>
-  <%#= image_tag (""), class: "img-responsive"%>
-  <%# end %>
-</div>
-
-<div>
-  <p>Owner: <%= @monument.user_id.username %></p>
-  <p><%= @monument.description %></p>
-</div>
-
-<div>
-  <p><%= @monument.price %></p>
-  <p><%= @monument.availability %></p>
-</div>
+<ul>
+  <li><%= @monument.address %></li>
+  <li><%= @monument.user_id.username %></li>
+  <li><%= @monument.description %></li>
+  <li><%= @monument.price %></li>
+</ul>
