show.html.erb created for Monuments

--- a/app/views/pages/monuments/show.html.erb
+++ b/app/views/pages/monuments/show.html.erb
@@ -3,5 +3,5 @@
   <li><%= @monument.address %></li>
   <li><%= @monument.user_id.username %></li>
   <li><%= @monument.description %></li>
-  <li><%= @monument.price %></li>
+  <li><%= @monument.price %> € / night</li>
 </ul>
