added with modifications on carousel

--- a/app/views/monuments/show.html.erb
+++ b/app/views/monuments/show.html.erb
@@ -9,7 +9,7 @@
   <% if @monument.picture != nil %>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="<%= @monument.picture%>" class="d-block w-30em" alt="...">
+        <img src="<%= @monument.picture%>" class="d-block -30em" alt="...">
       </div>
   <% end %>
   <%# if @monument.picture.length = 2 %>
