--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <body>
     <nav class="navbar bg-body-tertiary">
       <div class="container-fluid border-top border-bottom border-1 py-3">
-        <a class="navbar-brand">Wonderloc</a>
+        <%= link_to "Wonderloc", root_path, class: "navbar-brand" %>
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button type="button" class="btn btn-outline-success">Search</button>
