--- a/app/views/monuments/show.html.erb
+++ b/app/views/monuments/show.html.erb
@@ -33,6 +33,7 @@
       </button>
     </div>
 
+
     <div class="row justify-content-between p-2">
       <div class="col-8 mt-3">
         <h1><%= @monument.name %></h1>
@@ -47,8 +48,26 @@
     </div>
   </div>
 
+<%# avatar, username, address and availability %>
   <div class="col-3 border border-secondary mb-3 rounded">
-    <%= @monument.user.username %>
-    <%= @monument.address %>
+    <div class="row mt-3 align-items-center">
+      <div class="col-3 text-center">
+        <% if @monument.user.picture_url != nil %>
+          <img src="<%= @monument.user.picture_url %>" alt="user picture" class="avatar">
+        <% else %>
+          <i class="fa-solid fa-user avatar"></i>
+        <% end %>
+        <h6><strong><%= @monument.user.username %></strong></h6>
+      </div>
+      <div class="col-9">
+        <p><%= @monument.address %></p>
+      </div>
+
+    <hr class="mt-3">
+    <h5>availability</h5>
+
+    </div>
+    <%= link_to 'rent the monument', new_monument_booking_path(@monument) , class: "btn btn-outline-success mx-3" %>
+
   </div>
 </div>
