--- a/app/assets/stylesheets/components/_card-monument.scss
+++ b/app/assets/stylesheets/components/_card-monument.scss
@@ -1,6 +1,6 @@
 .card-monument {
   overflow: hidden;
-  background: white;
+  background: transparent;
 
   img {
     height: 300px;
@@ -26,5 +26,6 @@
     justify-content: space-between;
     align-items: flex-end;
     position: relative;
+    padding-inline: 0px;
   }
 }
