--- a/app/views/monuments/new.html.erb
+++ b/app/views/monuments/new.html.erb
@@ -1,6 +1,7 @@
 <h2>Add a monument</h2>
 <%= simple_form_for(@monument) do |m| %>
   <%= m.input :name %>
+  <%= m.input :picture %>
   <%= m.input :photos, as: :file, input_html: { multiple: true } %>
   <%= m.input :price %>
   <%= m.input :description %>
