--- a/app/views/monuments/index.html.erb
+++ b/app/views/monuments/index.html.erb
@@ -2,7 +2,7 @@
   <% @monuments.each do |monument| %>
     <%= link_to monument_path(monument), class: "text-decoration-none link-dark" do %>
       <div class="card-monument">
-         <% monument.photos.each do |photo| %>
+         <% monument.photos.each, class: "rounded-4" do |photo| %>
               <%= cl_image_tag(photo.key, width: 400, height: 300, crop: :fill) %>
           <% end %>
 
