Rounded corners for monument index cards images

--- a/app/views/monuments/index.html.erb
+++ b/app/views/monuments/index.html.erb
@@ -2,8 +2,8 @@
   <% @monuments.each do |monument| %>
     <%= link_to monument_path(monument), class: "text-decoration-none link-dark" do %>
       <div class="card-monument">
-         <% monument.photos.each, class: "rounded-4" do |photo| %>
-              <%= cl_image_tag(photo.key, width: 400, height: 300, crop: :fill) %>
+         <% monument.photos.each do |photo| %>
+              <%= cl_image_tag(photo.key, width: 400, height: 300, crop: :fill, class: "rounded-4") %>
           <% end %>
 
         <div class="card-monument-infos">
