Adding create functionality on bookings

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,2 +1,2 @@
 <h2>Book a monument</h2>
-<%= render "shared/form", booking: @booking %>
+<%= render "shared/form", monument: @monument, booking: @booking %>
