--- a/app/views/monuments/index.html.erb
+++ b/app/views/monuments/index.html.erb
@@ -1,17 +1,21 @@
 <div class="cards">
   <% @monuments.each do |monument| %>
-    <%= link_to monument_path(monument), class: "text-decoration-none link-dark" do %>
+    <%= link_to monument_path(monument), class: "text-decoration-none link-dark mb-3" do %>
       <div class="card-monument">
          <% monument.photos.each do |photo| %>
               <%= cl_image_tag(photo.key, width: 400, height: 300, crop: :fill, class: "rounded-4") %>
           <% end %>
 
         <div class="card-monument-infos">
-          <div>
-            <h2><%= monument.name %></h2>
-            <p><%= monument.address %></p>
+          <div class="row">
+            <div class="d-flex flex-column">
+              <h2><%= monument.name %></h2>
+              <p><%= monument.address %></p>
+            </div>
+            <div class="d-flex flex-column">
+              <h2 class="card-monument-pricing"><strong>$<%= monument.price %></strong><em> per night</em></h2>
+            </div>
           </div>
-          <h2 class="card-monument-pricing">$<%= monument.price %></h2>
         </div>
       </div>
     <% end %>
