--- a/app/views/monuments/index.html.erb
+++ b/app/views/monuments/index.html.erb
@@ -9,7 +9,7 @@
         <div class="card-monument-infos">
           <div>
             <h2><%= monument.name %></h2>
-            <p><%= monument.address %></p>
+            <p><%= monument.city %>, <%= monument.country %></p>
           </div>
           <h2 class="card-monument-pricing">$<%= monument.price %></h2>
         </div>
