--- a/app/views/monuments/index.html.erb
+++ b/app/views/monuments/index.html.erb
@@ -7,9 +7,14 @@
           <% end %>
 
         <div class="card-monument-infos">
-          <div>
-            <h2><%= monument.name %></h2>
-            <p><%= monument.city %>, <%= monument.country %></p>
+          <div class="row">
+            <div class="d-flex flex-column">
+              <h2><%= monument.name %></h2>
+              <p><%= monument.city %>, <%= monument.country %></p>
+            </div>
+            <div class="d-flex flex-column">
+              <h2 class="card-monument-pricing"><strong>$<%= monument.price %></strong><em> per night</em></h2>
+            </div>
           </div>
           <h2 class="card-monument-pricing">$<%= monument.price %></h2>
         </div>
