--- a/app/views/dashboards/profile.html.erb
+++ b/app/views/dashboards/profile.html.erb
@@ -1,17 +1,18 @@
 <h1>Bookings</h1>
 
 <h3>Mes réservations futures</h3>
-
 <% @bookings.each do |booking| %>
   <% if booking.start_date > Date.today %>
-    <div class="card-product">
-      <%#= cl_image_tag(booking.photo.key, width: 400, height: 300, crop: :fill) %>
-      <div class="card-product-infos">
-        <h2><%= booking.monument.name %></h2>
-        <p><%= booking.start_date %> au <%= booking.end_date %></p>
-        <p><%= booking.total_price %> €</p>
+    <%= link_to monument_path(booking.monument_id), class: "text-decoration-none link-dark mb-3" do %>
+      <div class="card-product">
+        <%= cl_image_tag(booking.monument.photos.first.key, width: 400, height: 300, crop: :fill) %>
+        <div class="card-product-infos">
+          <h2><%= booking.monument.name %></h2>
+          <p><%= booking.start_date %> au <%= booking.end_date %></p>
+          <p><%= booking.total_price %> €</p>
+        </div>
       </div>
-    </div>
+    <% end %>
   <% end %>
 <% end %>
 
@@ -19,30 +20,35 @@
 
 <h3>Mes anciennes réservations</h3>
 
-<% @bookings.each do |booking| %>
-  <% if booking.start_date < Date.today %>
-    <div class="card-product">
-      <%#= cl_image_tag(booking.monument.photo.key, width: 400, height: 300, crop: :fill) %>
-      <div class="card-product-infos">
-        <h2><%= booking.monument.name %></h2>
-        <p><%= booking.start_date %> au <%= booking.end_date %></p>
-        <p><%= booking.total_price %> €</p>
-      </div>
-    </div>
+<div class="row">
+  <% @bookings.each do |booking| %>
+    <%= link_to monument_path(booking.monument_id), class: "text-decoration-none link-dark mb-3" do %>
+      <% if booking.start_date < Date.today %>
+        <div class="card-product col-5">
+          <%= cl_image_tag(booking.monument.photos.first.key, width: 400, height: 300, crop: :fill) %>      <div class="card-product-infos">
+            <h2><%= booking.monument.name %></h2>
+            <p><%= booking.start_date %> au <%= booking.end_date %></p>
+            <p><%= booking.total_price %> $</p>
+          </div>
+        </div>
+      <% end %>
+    <% end %>
   <% end %>
-<% end %>
+</div>
 
 <hr>
 
 <h3>Mes monuments</h3>
 <% if @monuments != nil %>
   <% @monuments.each do |monument| %>
-    <div class="card-product">
-      <%#= cl_image_tag(photo.key, width: 400, height: 300, crop: :fill) %>
+  <div class="row">
+    <div class="card-product col-5">
+      <%= cl_image_tag(monument.photos.first.key, width: 400, height: 300, crop: :fill) %>
       <div class="card-product-infos">
         <h2><%= monument.name %></h2>
         <%#= link_to 'booking',  %>
       </div>
     </div>
+  </div>
   <% end %>
 <% end %>
