--- a/app/views/monuments/index.html.erb
+++ b/app/views/monuments/index.html.erb
@@ -12,6 +12,7 @@
               <h2><%= monument.name %></h2>
               <p><%= monument.city %>, <%= monument.country %></p>
             </div>
+            <%# ajout de div %>
             <div class="d-flex flex-column">
               <h2 class="card-monument-pricing"><strong>$<%= monument.price %></strong><em> per night</em></h2>
             </div>
