--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,15 +12,7 @@
   </head>
 
   <body>
-    <nav class="navbar bg-body-tertiary">
-      <div class="container-fluid border-top border-bottom border-1 py-3">
-        <%= link_to "Wonderloc", root_path, class: "navbar-brand" %>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button type="button" class="btn btn-outline-success">Search</button>
-        </form>
-      </div>
-    </nav>
+    <%= render "shared/navbar" %>
 
     <div class="container">
       <p class="notice"><%= notice %></p>
