--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,7 +13,7 @@
     <%= f.input :username,
                 required: true,
                 autofocus: true %>
-    <%= f.input :picture_url, as: :file %>
+    <%= f.input :picture_url, :photo, as: :file %>
     <%= f.input :bio %>
     <%= f.input :email,
                 required: true,
