--- a/app/views/monuments/show.html.erb
+++ b/app/views/monuments/show.html.erb
@@ -57,7 +57,7 @@
         <p><strong>Price :</strong></p>
         <h6 class="mt-3 "><%= @monument.price %> € / nuit</h6>
         <p class="mt-3"><strong>Rating :</strong></p>
-        <h6> / 5</h6>
+        <h6> <%= @monument.rate %> / 5</h6>
       </div>
     </div>
   </div>
