--- a/app/views/monuments/show.html.erb
+++ b/app/views/monuments/show.html.erb
@@ -55,7 +55,7 @@
       </div>
       <div class="col-3 m-1 pt-2 border border-secondary rounded text-end ">
         <p><strong>Price :</strong></p>
-        <h6 class="mt-3 "><%= @monument.price %> € / nuit</h6>
+        <h6 class="mt-3 "><%= @monument.price %> $ / nuit</h6>
         <p class="mt-3"><strong>Rating :</strong></p>
         <h6> <%= @monument.rate %> / 5</h6>
       </div>
@@ -64,24 +64,20 @@
 
 <%# avatar, username, address and availability %>
   <div class="col-3 border border-secondary mb-3 rounded">
-    <div class="row mt-3 align-items-center">
-      <div class="col-3 text-center">
-        <% if @monument.user.picture_url != nil %>
-          <img src="<%= @monument.user.picture_url %>" alt="user picture" class="avatar">
+      <div class="col-4 text-center mt-3">
+        <% if @monument.user.photo != nil %>
+          <%= cl_image_tag(@monument.user.photo.key, class:"avatar") %>
         <% else %>
           <i class="fa-solid fa-user avatar"></i>
         <% end %>
-        <h6><strong><%= @monument.user.username %></strong></h6>
+        <h6 class='mt-2'><strong><%= @monument.user.username %></strong></h6>
       </div>
+      <hr>
       <div class="col-9">
-        <p><%= @monument.address_details %>, <%= @monument.city %>, <%= @monument.country %></p>
+        <p><%= @monument.address_details %>, <%= @monument.city %></p>
+        <p><%= @monument.country %></p>
       </div>
 
-    <hr class="mt-3">
-    <h5>availability</h5>
-
-    </div>
-    <%= link_to 'rent the monument', new_monument_booking_path(@monument) , class: "btn btn-outline-success mx-3" %>
 
   </div>
 
