Added dropdown avatar fluid

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar bg-body-tertiary">
+<nav class="navbar navbar-expand-sm navbar-light bg-body-tertiary">
   <div class="container-fluid border-top border-bottom border-1 py-3">
     <%= link_to "Wonderloc", root_path, class: "navbar-brand" %>
     <div>
