--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -4,6 +4,6 @@
               input_html: { data: { datepicker_target: "start", action: "change->datepicker#checkDates change->datepicker#endDate" } } %>
   <%= b.input :end_date,
               as: :string,
-              input_html: { data: { datepicker_target: "end", action: "change->datepicker#checkDates" } } %>
+              input_html: { data: { datepicker_target: "end", action: "change->datepicker#checkDates change->datepicker#startDate" } } %>
   <%= b.submit 'Submit', data: { datepicker_target: "sub" } %>
 <% end %>
