--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,7 +1,8 @@
 .cards {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-gap: 24px;
+  grid-row-gap: 2.5em;
+  grid-column-gap: 3.5em;
 }
 
 // Smallest device
