--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,14 +1,12 @@
 <nav class="navbar bg-body-tertiary">
   <div class="container-fluid border-top border-bottom border-1 py-3">
     <%= link_to "Wonderloc", root_path, class: "navbar-brand" %>
-    <div>
-      <form class="d-flex" role="search">
-        <div class="search-bar d-flex">
+      <form class="d-flex col-3" role="search">
           <%= form_with url: monuments_path, method: :get, class: "d-flex" do %>
             <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "Looking for a monument?"%>
-            <%= submit_tag "Search", class: "btn btn-primary" %>
+            <%= submit_tag "SEARCH", class: "btn btn-primary" %>
           <% end %>
-        </div>
+      </form>
         <div class="ms-2">
           <ul class="navbar-nav me-auto">
             <% if user_signed_in? %>
@@ -24,7 +22,5 @@
             <% end %>
           </ul>
         </div>
-      </form>
-    </div>
   </div>
 </nav>
