--- a/app/views/monuments/show.html.erb
+++ b/app/views/monuments/show.html.erb
@@ -74,8 +74,7 @@
       </div>
       <hr>
       <div class="col-9">
-        <p><%= @monument.address_details %>, <%= @monument.city %></p>
-        <p><%= @monument.country %></p>
+        <p><%= @monument.address %>
       </div>
 
 
