--- a/app/views/monuments/index.html.erb
+++ b/app/views/monuments/index.html.erb
@@ -10,7 +10,7 @@
           <div class="row">
             <div class="d-flex flex-column">
               <h2><%= monument.name %></h2>
-              <p><%= monument.city %>, <%= monument.country %></p>
+              <p><%= monument.address %></p>
             </div>
             <div class="d-flex flex-column">
               <h2 class="card-monument-pricing"><strong>$<%= monument.price %></strong><em> per night</em></h2>
