--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -1,1 +1,5 @@
-<h1>Edit de booking</h1>
+<div class="container my-4">
+  <h1>Edit your booking</h1>
+  <br>
+  <%= render "form_edit", booking: @booking %>
+</div>
