--- a/app/views/monuments/index.html.erb
+++ b/app/views/monuments/index.html.erb
@@ -1,34 +1,36 @@
-<div class="row">
-  <div class="col-8">
-    <div class="cards">
-      <% @monuments.each do |monument| %>
-        <%= link_to monument_path(monument), class: "text-decoration-none link-dark mb-3" do %>
-          <div class="card-monument">
-            <% monument.photos.each do |photo| %>
-                <%= cl_image_tag(photo.key, width: 400, height: 300, crop: :fill, class: "rounded-4") %>
-              <% end %>
+<div data-controller="">
+  <div class="row">
+    <div class="col-8">
+      <div class="cards">
+        <% @monuments.each do |monument| %>
+          <%= link_to monument_path(monument), class: "text-decoration-none link-dark mb-3" do %>
+            <div class="card-monument">
+              <% monument.photos.each do |photo| %>
+                  <%= cl_image_tag(photo.key, width: 400, height: 300, crop: :fill, class: "rounded-4") %>
+                <% end %>
 
-            <div class="card-monument-infos">
-              <div class="row">
-                <div class="d-flex flex-column">
-                  <h2><%= monument.name %></h2>
-                  <p><%= monument.address %></p>
-                </div>
-                <div class="d-flex flex-column">
-                  <h2 class="card-monument-pricing"><strong>$<%= monument.price %></strong><em> per night</em></h2>
+              <div class="card-monument-infos">
+                <div class="row">
+                  <div class="d-flex flex-column">
+                    <h2><%= monument.name %></h2>
+                    <p><%= monument.address %></p>
+                  </div>
+                  <div class="d-flex flex-column">
+                    <h2 class="card-monument-pricing"><strong>$<%= monument.price %></strong><em> per night</em></h2>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
+          <% end %>
         <% end %>
-      <% end %>
+      </div>
     </div>
-  </div>
-  <div class="col-4">
-    <div class="map-index" style="width: 100%; height: 600px;"
-      data-controller="map"
-      data-map-markers-value="<%= @markers.to_json %>"
-      data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+    <div class="col-4">
+      <div class="map-index" style="width: 100%; height: 600px;"
+        data-controller="map"
+        data-map-markers-value="<%= @markers.to_json %>"
+        data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+      </div>
     </div>
   </div>
 </div>
