Form style changes

--- a/app/views/monuments/_formmonument.html.erb
+++ b/app/views/monuments/_formmonument.html.erb
@@ -1,6 +1,6 @@
 <div class="d-flex justify-content-center">
   <div class="d-flex flex-column mb-3">
-    <h2>New monument</h2>
+    <h2>Editing your monument</h2>
     <div class="input-group d-flex">
       <%= simple_form_for(@monument) do |m| %>
         <%= m.input :name %>
@@ -11,6 +11,7 @@
         <%= m.submit %>
       <% end %>
     </div>
-      <button type="button" class="btn mt-3"><%= link_to 'Back to list', monuments_path %></button>
+      <button type="button" class="btn mt-3"><%= link_to "Show this monument", @monument %> |
+  <%= link_to "Back to monuments", monuments_path %></button>
   </div>
 </div>
