--- a/app/views/monuments/show.html.erb
+++ b/app/views/monuments/show.html.erb
@@ -54,7 +54,7 @@
       </div>
       <div class="col-3 m-1 pt-2 border border-secondary rounded text-end ">
         <p><strong>Price :</strong></p>
-        <h6 class="mt-3 "><%= @monument.price %> $ / nuit</h6>
+        <h6 class="mt-3 "><%= @monument.price %> $ / Night</h6>
         <p class="mt-3"><strong>Rating :</strong></p>
         <h6> <%= @monument.rate %> / 5</h6>
       </div>
