Added hover relation between a card and its pin

--- a/app/views/monuments/_marker.html.erb
+++ b/app/views/monuments/_marker.html.erb
@@ -1,1 +1,1 @@
-<div class="custom-marker" id="<%= monument_id %>"></div>
+<div class="custom-marker" id="<%= monument_id %>" data-pin-card-hover-target="pin"></div>
