--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -16,6 +16,11 @@
   transition: all ease-in-out 0.3s;
 }
 
+.red-pin {
+  background-image: url("pin-red.png") !important;
+  transform: scale(1.1) !important;
+}
+
 .mapboxgl-canvas-container {
   .custom-marker:hover {
     background-image: url("pin-red.png");
