--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -56,7 +56,7 @@
             </div>
           <% end %>
         </div>
+        <%= link_to 'Add a review', new_booking_review_path(@booking), class: "btn btn-primary my-3" %>
       </div>
     </div>
   </div>
-</main>
