--- a/app/views/monuments/_marker.html.erb
+++ b/app/views/monuments/_marker.html.erb
@@ -1,1 +1,1 @@
-<%= image_tag "pin.png", height: 30, width: 30, alt: "Pin" %>
+<div class="custom-marker" id="<%= monument_id %>" data-pin-card-hover-target="pin"></div>
