--- a/app/views/monuments/show.html.erb
+++ b/app/views/monuments/show.html.erb
@@ -54,7 +54,7 @@
       </div>
       <div class="col-3 m-1 pt-2 border border-secondary rounded text-end ">
         <p><strong>Price :</strong></p>
-        <h6 class="mt-3 "><%= @monument.price %> $ / nuit</h6>
+        <h6 class="mt-3 "><%= @monument.price %> $ / Night</h6>
         <p class="mt-3"><strong>Rating :</strong></p>
         <h6> <%= @monument.rate %> / 5</h6>
       </div>
@@ -77,6 +77,24 @@
       </div>
 
 
+  </div>
+
+  <div class="row justify-content-between p-2">
+    <div class="col-8 mt-3">
+      <h3>Reviews</h3>
+      <% if @monument.reviews == [] %>
+        <p>Nothing yet...</p>
+      <% else %>
+        <div class="row">
+        <% @monument.reviews.each do |review| %>
+          <div class="col-3 m-1 pt-2 border border-secondary rounded text-start">
+            <p class="mt-3"><strong>Rating : </strong><%= review.rating %>/5</p>
+            <p class="mt-3"><%= review.content.truncate(40) %></p>
+          </div>
+        <% end %>
+        </div>
+      <% end %>
+    </div>
   </div>
 
 </div>
